--- a/src/InstantSoin/ProductBundle/Resources/views/Accueil/sidebar.html.twig
+++ b/src/InstantSoin/ProductBundle/Resources/views/Accueil/sidebar.html.twig
@@ -1,10 +1,9 @@
 <section>
-    <h3>Informations utiles</h3>
+    <h3 class="H3">Informations utiles</h3>
 
     <div id="accordion">
 	    <h4>Me connaître</h4>
     		<div>
-			<p><a href="{{ path( 'whoswho' ) }}">Qui suis-je?</a></p>
 			<blockquote>
 			Titulaire d'un cap et d'un BP d'esthétique-cosmétique et fort de mes 13 ans d'experience en institut sur Paris et en région parisienne, j'ai décidé de me mettre à domicile pour privilégier votre bien-être et votre confort tout cela sans stress et sans attente.
 			</blockquote>
@@ -32,8 +31,7 @@
 					<br>
 					Suivant les secteurs je me déplace pour un montant minimum de 15€.
 				</blockquote>
-				<div id="EmplacementDeMaCarte">
-				</div>
+				<a href="{{ path( 'whoswho' ) }}">Carte</a>
 			</div>
 			
 
