--- a/src/InstantSoin/ProductBundle/Resources/views/Category/listingCategoryServ.html.twig
+++ b/src/InstantSoin/ProductBundle/Resources/views/Category/listingCategoryServ.html.twig
@@ -1,7 +1,7 @@
 {% extends 'UserBundle:Admin:admin.html.twig' %}
 {% block body %}
 
-    <h3>Gestion des catégories de service</h3>
+    <h3 class="h3">Gestion des catégories de service</h3>
     <div>
         <a href="createCategoryServ" class="btn btn-success actionButton">Ajouter une catégorie</a>
     </div>
