--- a/src/InstantSoin/ProductBundle/Resources/views/Products/Products_overall.html.twig
+++ b/src/InstantSoin/ProductBundle/Resources/views/Products/Products_overall.html.twig
@@ -1,7 +1,7 @@
 {% extends 'ProductBundle::layout.html.twig' %}
 
 {% block body %}
-   <h3>Les produits cosmétiques proposés :</h3>
+   <h3 class="h3">Les produits cosmétiques proposés :</h3>
 	<section>
       {% for Products in categoriesProd %}<div class="overall"><img src="{{ asset(categoriesProd[ loop.index0 ].urlimage) }}" class="serviceimg" alt="Image impossible à charger"><form action="{{ path( 'products_by_cat', {'id' : categoriesProd[ loop.index0 ].id } ) }}"><input type="submit" value="{{categoriesProd[ loop.index0 ].intitule }}" alt="Cliquez pour accéder à la rubrique"></form></div>{% endfor %}
    </section>
