--- a/src/InstantSoin/ProductBundle/Resources/views/Products/listingProducts.html.twig
+++ b/src/InstantSoin/ProductBundle/Resources/views/Products/listingProducts.html.twig
@@ -1,7 +1,7 @@
 {% extends 'UserBundle:Admin:admin.html.twig' %}
 {% block body %}
 
-    <h3>Gestion des produits</h3>
+    <h3 class="h3">Gestion des produits</h3>
     <div>
         <a href="createProducts" class="btn btn-success actionButton">Ajouter un produit</a>
     </div>
