--- a/src/InstantSoin/ProductBundle/Resources/views/Products/updateProducts.html.twig
+++ b/src/InstantSoin/ProductBundle/Resources/views/Products/updateProducts.html.twig
@@ -1,7 +1,7 @@
 {% extends 'UserBundle:Admin:admin.html.twig' %}
 {% block body %}
 
-    <h3>Modifier un produit</h3>
+    <h3 class="h3">Modifier un produit</h3>
     {% for flashMessage in app.session.flashbag.get('user_add_success') %}
         <div class="add_success">
         <p>
