--- a/src/InstantSoin/ProductBundle/Resources/views/Services/listingServices.html.twig
+++ b/src/InstantSoin/ProductBundle/Resources/views/Services/listingServices.html.twig
@@ -1,7 +1,7 @@
 {% extends 'UserBundle:Admin:admin.html.twig' %}
 {% block body %}
 
-    <h3>Gestion des prestations</h3>
+    <h3 class="h3">Gestion des prestations</h3>
     <div>
         <a href="createServices" class="btn btn-success actionButton">Ajouter une prestation</a>
     </div>
