--- a/src/InstantSoin/ProductBundle/Resources/views/Suppliers/listingSuplier.html.twig
+++ b/src/InstantSoin/ProductBundle/Resources/views/Suppliers/listingSuplier.html.twig
@@ -1,7 +1,7 @@
 {% extends 'UserBundle:Admin:admin.html.twig' %}
 {% block body %}
 
-    <h3>Gestion des fournisseurs</h3>
+    <h3 class="h3">Gestion des fournisseurs</h3>
     <div>
         <a href="createSupplier" class="btn btn-success actionButton">Ajouter un fournisseur</a>
     </div>
